--- a/vite/package.json
+++ b/vite/package.json
@@ -14,8 +14,11 @@
   "type": "commonjs",
   "devDependencies": {
     "@vitejs/plugin-react": "^5.1.0",
+    "autoprefixer": "^10.4.22",
+    "postcss": "^8.5.6",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "tailwindcss": "^4.1.17",
     "vite": "^7.2.2"
   }
 }
