--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
   "type": "commonjs",
   "devDependencies": {
     "@vitejs/plugin-react": "^5.1.0",
+    "autoprefixer": "^10.4.23",
     "baseline-browser-mapping": "^2.9.11",
     "copy-webpack-plugin": "^13.0.1",
     "cpx": "^1.5.0",
+    "postcss": "^8.5.6",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "tailwindcss": "^4.1.18",
     "vite": "^7.2.2"
   }
 }
