--- a/package.json
+++ b/package.json
@@ -17,11 +17,17 @@
     "autoprefixer": "^10.4.23",
     "baseline-browser-mapping": "^2.9.11",
     "copy-webpack-plugin": "^13.0.1",
-    "cpx": "^1.5.0",
+    "cpy-cli": "^7.0.0",
     "postcss": "^8.5.6",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "tailwindcss": "^4.1.18",
     "vite": "^7.2.2"
+  },
+  "dependencies": {
+    "re-resizable": "^6.11.2",
+    "react-draggable": "^4.5.0",
+    "react-hook-form": "^7.71.1",
+    "react-resizable-panels": "^4.6.2"
   }
 }
